--- a/home/index.html
+++ b/home/index.html
@@ -29,7 +29,7 @@
       <table ng-repeat=" categoria in $ctrl.categorias">
         <thead>
           <tr>
-            <td>Tarefas Pendentes</td>
+            <td ng-bind="categoria">Tarefas Pendentes</td>
           </tr>
 
           <tr>
