--- a/home/index.html
+++ b/home/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.3/angular.min.js"></script>
-    <script src="../app/tp1.js">
-
-    </script>
+    <script src="../app/tp1.js"></script>
     <script src="home.js"></script>
   </head>
 
