corrigido array e adicionado efeitos de sucesso ou erro

--- a/categorias/index.html
+++ b/categorias/index.html
@@ -21,11 +21,11 @@
           <hr ng-show="categoria">
         </div>
 
-        <div ng-show="sucesso">
+        <div ng-show="$ctrl.sucesso">
           <p>Ok! Categoria adicionado com sucesso</p>
         </div>
 
-        <div ng-show="erro">
+        <div ng-show="$ctrl.erro">
           <p>Erro! Não foi possível adicionar a categoria. MAIS IFO SOBRE ERRO</p>
         </div>
 
