--- a/tarefas/index.html
+++ b/tarefas/index.html
@@ -13,6 +13,16 @@
     <div ng-controller="tarefaController as $ctrl">
       <input type="text" placeholder="Adicione uma categoria e pressione enter" dl-enter-key="$ctrl.myFunction()" ng-model="$ctrl.entrada">
       <button type="button">X</button>
+
+      <!-- xxxxxxxxxxxxxxxxxxxxxx Resolução para esta etapa xxxxxxxxxxxxxxxxxxxxxxx -->
+      <button type="button" ng-click="$ctrl.clickSelecioneCategoria = true"> Selecione uma categoria</button>
+
+      <div ng-show="$ctrl.clickSelecioneCategoria" ng-repeat="categoria in $ctrl.categorias">
+        <p ng-click="$ctrl.selecioneCategoria(categoria)">{{ categoria }}</p>
+      </div>
+
+      <!-- xxxxxxxxxxxxxxxxxxxxxx Resolução para esta etapa xxxxxxxxxxxxxxxxxxxxxxx -->
+
       <div ng-repeat="tarefa in $ctrl.tarefas">
         <p>Lista de tarefas</p>
         <hr>
