--- a/tarefas/index.html
+++ b/tarefas/index.html
@@ -12,7 +12,7 @@
 
     <div ng-controller="tarefaController as $ctrl">
       <input type="text" placeholder="Adicione uma categoria e pressione enter" dl-enter-key="$ctrl.condicaoParaMyFunction()" ng-model="$ctrl.entrada">
-      <button type="button">X</button>
+      <button type="button" ng-click="$ctrl.limpar()" >X</button>
 
       <!-- xxxxxxxxxxxxxxxxxxxxxx Resolução para esta etapa xxxxxxxxxxxxxxxxxxxxxxx -->
       <button type="button" ng-click="$ctrl.clickSelecioneCategoria = true" > Selecione uma categoria {{ $ctrl.novaCategoria }}</button>
