criado css da pagina principal

--- a/tarefas/index.html
+++ b/tarefas/index.html
@@ -5,6 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.3/angular.min.js"></script>
     <script src="../app/tp1.js"></script>
     <script src="adcionar_tarefas.js"></script>
+    <link rel="stylesheet" href="../css/master.css">
 
     <title></title>
   </head>
