--- a/home/index.html
+++ b/home/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.3/angular.min.js"></script>
-    <script src="../app/tp1.js"></script>
-    <script src="home.js"></script>
-    <link rel="stylesheet" href="../css/master.css">
-  </head>
 
-  <body ng-app="tp1" ng-controller = "homeController as $ctrl">
-    <header>
-      <ul>
-        <li> <button type="button"> + Categoria </button> </li>
-        <li> <button type="button"> + Tarefa </button> </li>
-        <li> <button type="button" ng-bind = "$ctrl.btnValor" ng-click = "$ctrl.trocar()" > </button> </li>
-      </ul>
-    </header>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.3/angular.min.js"></script>
+  <script src="../app/tp1.js"></script>
+  <script src="home.js"></script>
+  <link rel="stylesheet" href="../css/master.css">
+</head>
 
+<body ng-app="tp1" ng-controller="homeController as $ctrl">
+  <header>
+    <ul>
+      <li> <button type="button" ng-bind="$ctrl.btnValor" ng-click="$ctrl.trocar()"> </button> </li>
+      <li> <button type="button"> + Tarefa </button> </li>
+      <li> <button type="button"> + Categoria </button> </li>
+    </ul>
+  </header>
 
+  <main>
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Teste inicio xxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
-<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Teste inicio xxxxxxxxxxxxxxxxxxxxxxxxxx -->
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Teste inicio xxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
-<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Teste inicio xxxxxxxxxxxxxxxxxxxxxxxxxx -->
-
-    <div ng-hide = "$ctrl.mostrar">
-      <table ng-repeat=" categoria in $ctrl.categorias">
+    <div ng-hide="$ctrl.mostrar">
+      <table class="tabela" ng-repeat=" categoria in $ctrl.categorias">
         <thead>
-          <tr>
-            <td ng-bind="categoria">Tarefas Pendentes</td>
+          <tr class="titulo">
+            <td  colspan="3" ng-bind="categoria">Tarefas Pendentes</td>
           </tr>
 
           <tr>
@@ -37,29 +37,29 @@
             <td>Categoria</td>
           </tr>
         </thead>
-          <tbody ng-repeat = "tarefa in $ctrl.tarefas | comparisonCategory:categoria ">
-            <tr>
-              <td> <input type="checkbox" ng-model= "tarefa.feito"> </td>
-              <td ng-bind = "tarefa.nome"  ng-class="{cortado : tarefa.feito}"></td>
-              <td ng-bind = "tarefa.categoria"></td>
-            </tr>
-          </tbody>
+        <tbody ng-repeat="tarefa in $ctrl.tarefas | comparisonCategory:categoria ">
+          <tr>
+            <td class="centralizado"> <input type="checkbox" ng-model="tarefa.feito"> </td>
+            <td ng-bind="tarefa.nome" ng-class="{cortado : tarefa.feito}"></td>
+            <td ng-bind="tarefa.categoria"></td>
+          </tr>
+        </tbody>
       </table>
 
     </div>
 
 
-<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Teste Final xxxxxxxxxxxxxxxxxxxxxxxxxx -->
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Teste Final xxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
-<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Teste Final xxxxxxxxxxxxxxxxxxxxxxxxxx -->
+    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Teste Final xxxxxxxxxxxxxxxxxxxxxxxxxx -->
 
 
 
-    <div ng-show = "$ctrl.mostrar">
-      <table >
+    <div ng-show="$ctrl.mostrar">
+      <table class="tabela">
         <thead>
-          <tr>
-            <td>Tarefas Pendentes</td>
+          <tr class="titulo">
+            <td colspan="3">Tarefas Pendentes</td>
           </tr>
 
           <tr>
@@ -68,19 +68,19 @@
             <td>Categoria</td>
           </tr>
         </thead>
-          <tbody ng-repeat = "tarefa in $ctrl.tarefas | filter : false">
-            <tr>
-              <td> <input type="checkbox" ng-model= "tarefa.feito"> </td>
-              <td ng-bind = "tarefa.nome" ng-class="{cortado : tarefa.feito}"></td>
-              <td ng-bind = "tarefa.categoria"></td>
-            </tr>
-          </tbody>
+        <tbody ng-repeat="tarefa in $ctrl.tarefas | filter : false">
+          <tr>
+            <td class="centralizado"> <input type="checkbox" ng-model="tarefa.feito"> </td>
+            <td ng-bind="tarefa.nome" ng-class="{cortado : tarefa.feito}"></td>
+            <td ng-bind="tarefa.categoria"></td>
+          </tr>
+        </tbody>
       </table>
 
-      <table>
+      <table class="tabela">
         <thead>
-          <tr>
-            <td>Tarefas Concluídas</td>
+          <tr class="titulo">
+            <td  colspan="3">Tarefas Concluídas</td>
           </tr>
 
           <tr>
@@ -89,16 +89,19 @@
             <td>Categoria</td>
           </tr>
         </thead>
-          <tbody ng-repeat = "tarefa in $ctrl.tarefas | filter : true">
-            <tr>
-              <td> <input type="checkbox" ng-model= "tarefa.feito"> </td>
-              <td ng-bind = "tarefa.nome" ng-class="{cortado : tarefa.feito}"></td>
-              <td ng-bind = "tarefa.categoria"></td>
-            </tr>
-          </tbody>
+        <tbody ng-repeat="tarefa in $ctrl.tarefas | filter : true">
+          <tr>
+            <td class="centralizado"> <input type="checkbox" ng-model="tarefa.feito"> </td>
+            <td ng-bind="tarefa.nome" ng-class="{cortado : tarefa.feito}"></td>
+            <td ng-bind="tarefa.categoria"></td>
+          </tr>
+        </tbody>
 
       </table>
     </div>
 
-  </body>
+  </main>
+
+</body>
+
 </html>
