adicionada links para as tarefas

--- a/home/index.html
+++ b/home/index.html
@@ -14,8 +14,8 @@
   <header>
     <ul>
       <li> <button type="button" ng-bind="$ctrl.btnValor" ng-click="$ctrl.trocar()"> </button> </li>
-      <li> <button type="button"> + Tarefa </button> </li>
-      <li> <button type="button"> + Categoria </button> </li>
+      <li> <a href="../tarefas/index.html"><button type="button"> + Tarefa </button></a> </li>
+      <li> <a href="../categorias/index.html"><button type="button"> + Categoria </button></a> </li>
     </ul>
   </header>
 
